--- a/webuni/index.html
+++ b/webuni/index.html
@@ -86,8 +86,8 @@
 	<section class="categories-section spad">
 		<div class="container">
 			<div class="section-title">
-				<h2>Our Course Categories</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien. Suspendisse cursus faucibus finibus.</p>
+				<h2>Our Exam Categories</h2>
+				<p>There are no secrets to success. It is the result of preparation, hard work learning from failure.</p>
 			</div>
 			<div class="row">
 				<!-- categorie -->
@@ -95,9 +95,7 @@
 					<div class="categorie-item">
 						<div class="ci-thumb set-bg" data-setbg="img/categories/1.jpg"></div>
 						<div class="ci-text">
-							<h5>IT Development</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur</p>
-							<span>120 Courses</span>
+							<h5>Aptitude</h5>
 						</div>
 					</div>
 				</div>
@@ -106,9 +104,7 @@
 					<div class="categorie-item">
 						<div class="ci-thumb set-bg" data-setbg="img/categories/2.jpg"></div>
 						<div class="ci-text">
-							<h5>Web Design</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur</p>
-							<span>70 Courses</span>
+							<h5>Coding Test</h5>
 						</div>
 					</div>
 				</div>
@@ -117,72 +113,15 @@
 					<div class="categorie-item">
 						<div class="ci-thumb set-bg" data-setbg="img/categories/3.jpg"></div>
 						<div class="ci-text">
-							<h5>Illustration & Drawing</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur</p>
-							<span>55 Courses</span>
+							<h5>Psychometric Test</h5>
 						</div>
 					</div>
 				</div>
 				<!-- categorie -->
-				<div class="col-lg-4 col-md-6">
-					<div class="categorie-item">
-						<div class="ci-thumb set-bg" data-setbg="img/categories/4.jpg"></div>
-						<div class="ci-text">
-							<h5>Social Media</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur</p>
-							<span>40 Courses</span>
-						</div>
-					</div>
-				</div>
-				<!-- categorie -->
-				<div class="col-lg-4 col-md-6">
-					<div class="categorie-item">
-						<div class="ci-thumb set-bg" data-setbg="img/categories/5.jpg"></div>
-						<div class="ci-text">
-							<h5>Photoshop</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur</p>
-							<span>220 Courses</span>
-						</div>
-					</div>
-				</div>
-				<!-- categorie -->
-				<div class="col-lg-4 col-md-6">
-					<div class="categorie-item">
-						<div class="ci-thumb set-bg" data-setbg="img/categories/6.jpg"></div>
-						<div class="ci-text">
-							<h5>Cryptocurrencies</h5>
-							<p>Lorem ipsum dolor sit amet, consectetur</p>
-							<span>25 Courses</span>
-						</div>
-					</div>
-				</div>
 			</div>
 		</div>
 	</section>
 	<!-- categories section end -->
-
-
-	<!-- search section -->
-	<section class="search-section">
-		<div class="container">
-			<div class="search-warp">
-				<div class="section-title text-white">
-					<h2>Search your course</h2>
-				</div>
-				<div class="row">
-					<div class="col-md-10 offset-md-1">
-						<!-- search form -->
-						<form class="course-search-form">
-							<input type="text" placeholder="Course">
-							<input type="text" class="last-m" placeholder="Category">
-							<button class="site-btn">Search Couse</button>
-						</form>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- search section end -->
 
 
 	<!-- course section -->
@@ -190,14 +129,14 @@
 		<div class="container">
 			<div class="section-title mb-0">
 				<h2>Featured Courses</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada lorem maximus mauris scelerisque, at rutrum nulla dictum. Ut ac ligula sapien. Suspendisse cursus faucibus finibus.</p>
+				<p>There are no secrets to success. It is the result of preparation, hard work learning from failure..</p>
 			</div>
 		</div>
 		<div class="course-warp">
 			<ul class="course-filter controls">
 				<li class="control active" data-filter="all">All</li>
-				<li class="control" data-filter=".finance">Finance</li>
-				<li class="control" data-filter=".design">Design</li>
+				<li class="control" data-filter=".finance">Aptitude</li>
+				<li class="control" data-filter=".design">Coding</li>
 				<li class="control" data-filter=".web">Web Development</li>
 				<li class="control" data-filter=".photo">Photography</li>
 			</ul>                                       
@@ -210,7 +149,7 @@
 						</div>
 						<div class="course-info">
 							<div class="course-text">
-								<h5>Art & Crafts</h5>
+								<h5>Verbal</h5>
 								<p>Lorem ipsum dolor sit amet, consectetur</p>
 								<div class="students">120 Students</div>
 							</div>
