--- a/reg_web.html
+++ b/reg_web.html
@@ -33,13 +33,14 @@
   box-sizing: border-box;
 }
 
-input[type=text], select, textarea {
+input, select, textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
   border-radius: 4px;
   resize: vertical;
 }
+
 
 label {
   padding: 12px 12px 12px 0;
@@ -57,7 +58,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: #45a049;
+  background-color:#AED6F1 ;
 }
 
 .container {
@@ -92,6 +93,9 @@ input[type=submit]:hover {
     margin-top: 0;
   }
 }
+h2{
+
+}
 </style>
 </head>
 <body>
@@ -103,7 +107,7 @@ input[type=submit]:hover {
             <form action="/action_page.php">
               <div class="row">
                 <div class="col-25">
-                  <label for="fname">First Name</label>
+                  <label for="fname">Name</label>
                 </div>
                 <div class="col-75">
                   <input type="text" id="fname" name="firstname" placeholder="Your name..">
@@ -111,34 +115,21 @@ input[type=submit]:hover {
               </div>
               <div class="row">
                 <div class="col-25">
-                  <label for="lname">Last Name</label>
+                  <label for="fname">Password</label>
                 </div>
                 <div class="col-75">
-                  <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                  <input type="password" id="Password" name="password" placeholder="password">
                 </div>
               </div>
               <div class="row">
-                <div class="col-25">
-                  <label for="country">Country</label>
-                </div>
-                <div class="col-75">
-                  <select id="country" name="country">
-                    <option value="australia">Australia</option>
-                    <option value="canada">Canada</option>
-                    <option value="usa">USA</option>
-                  </select>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-25">
-                  <label for="subject">Subject</label>
-                </div>
-                <div class="col-75">
-                  <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-                </div>
-              </div>
-              <div class="row">
-                <input type="submit" value="Submit">
+                    <div class="col-25">
+                      <label for="fname">Confirm Password</label>
+                    </div>
+                    <div class="col-75">
+                      <input type="password" id="Password" name="password" placeholder="password">
+                    </div>
+                  </div>
+                <input type="submit" value="Submit" style="width: 200px;">
               </div>
             </form>
           </div>
