--- a/login_web.html
+++ b/login_web.html
@@ -59,7 +59,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color:lightgrey ;
+  background-color::lightgrey;
 }
 
 .container {
@@ -106,7 +106,7 @@ h2{
        <div class="column1">  </div>
        <center>
        <div class="column2">
-           <h2>Registration</h2>
+           <h2>Login</h2>
             <form action="/action_page.php">
               <div class="row">
                 <div class="col-25">
@@ -124,16 +124,9 @@ h2{
                   <input type="password" id="Password" name="password" placeholder="password">
                 </div>
               </div>
-              <div class="row">
-                    <div class="col-25">
-                      <label for="fname">Confirm Password</label></br>
-                    </div>
-                    <div class="col-75">
-                      <input type="password" id="Password" name="password" placeholder="password">
-                    </div>
-                  </div></br>
-               <input type="submit" value="Submit" style="width: 200px;"></br>
-                <a href="login_web.html">Login--></a></br>
+            </br>
+                <input type="submit" value="Submit" style="width: 200px;"></form></br>
+                <a href="reg_web.html">Registration--></a></br>
               </div>
             </center> 
             </form>
