--- a/login_web.html
+++ b/login_web.html
@@ -3,6 +3,10 @@
         <title>
             Exam Portal
         </title>
+        <link rel="stylesheet" href="exam1.css">
+<link rel="stylesheet" href="exam2.css">
+<link rel="stylesheet" href="exam3.css">
+
         <style>
     
     * {
@@ -20,7 +24,7 @@
 .column2 {
   float: left;
   width: 50%;
-  padding: 10px;
+  padding: 20px;
   height: 300px;
   
 }
@@ -102,6 +106,19 @@ h2{
 </style>
 </head>
 <body>
+  <!-- Navbar -->
+  <div class="w3-top">
+      <div class="w3-bar w3-black w3-card">
+        <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+        <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+        <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ABOUT</a>
+        <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TEST</a>
+        <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
+        
+        </div>
+        <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
+      </div>
+    </div>
 <div class="row">
        <div class="column1">  </div>
        <center>
@@ -132,5 +149,16 @@ h2{
             </form>
           </div>
 </div>
+<!-- Footer -->
+<footer class="w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+    <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <i class="fa fa-snapchat w3-hover-opacity"></i>
+    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+    <p class="w3-medium"> <a href="https://www.w3schools.com/w3css/default.asp" target="_blank"></a></p>
+  </footer>
+  
 </body>
 </html>
