--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <style>
             .div1{
-            background-image: url(E:\MCA3\sariga\ExamPortal\study-custom-illustration.png);
+            background-image: url(study-custom-illustration.png);
             background-repeat: no-repeat;
             background-position: center center;
             background-attachment: fixed;
