--- a/thankyou.html
+++ b/thankyou.html
@@ -1,5 +1,33 @@
 <html>
+    <head>
+        <style>
+        *{
+            box-sizing: border-box;
+        }
+        button {
+            width: 100%;
+            margin-top: 0;
+            max-width: 100px;
+            height: 30px;
+            background-color: #5DADE2 ;
+            width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+  background-color:#AED6F1;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+        }  
+            
+        </style>
+    </head>
     <body>
-        <h1 style="align-content: center;">Registered!!</h1>
+        <center><h1 style="align-content: center;">Registered!!</h1>
+        <button><a href="login_web.html">Login</a></button></center>
     </body>
 </html>
