login and registratuion

--- a/thankyou.html
+++ b/thankyou.html
@@ -28,6 +28,6 @@
     </head>
     <body>
         <center><h1 style="align-content: center;">Registered!!</h1>
-        <button><a href="login_web.html">Login</a></button></center>
+        <button><a href="login.php">Login</a></button></center>
     </body>
 </html>
