--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@ body {font-family: "Lato", sans-serif}
   <li><a class="active" href="file:///C:/Users/Admin/Downloads/car.html">Home</a></li>
   <li><a  href="file:///C:/Users/Admin/Downloads/model.html">Tests</a></li>
   <li><a href="file:///C:/Users/Saritha%20H/Downloads/contactnet.html">contact</a></li>
-  <li><a href="file:///C:/Users/Admin/Downloads/cust.html">New user/Login</a></li>
+  <li><a href="login.php">New user/Login</a></li>
   
 
   </ul>
