changes to contact

--- a/contact us.html
+++ b/contact us.html
@@ -50,21 +50,9 @@
 					<textarea class="input100" name="message" placeholder="Your message..."></textarea>
 				</div>
 
-				<div class="contact100-form-checkbox">
-					<input class="input-checkbox100" id="ckb1" type="checkbox" name="copy-mail">
-					<label class="label-checkbox100" for="ckb1">
-						Send copy to my-email
-					</label>
-				</div>
+				
 
-				<div class="container-contact100-form-btn">
-					<div class="wrap-contact100-form-btn">
-						<div class="contact100-form-bgbtn"></div>
-						<button class="contact100-form-btn">
-							Send Email
-						</button>
-					</div>
-				</div>
+				<input type="submit" value="Submit" style="width: 200px;">
 			</form>
 		</div>
 	</div>
