--- a/reg_web.html
+++ b/reg_web.html
@@ -129,6 +129,14 @@
               <input type="password" id="conpassword" name="conpassword" placeholder="confirmpassword">
             </div>
           </div>
+          <div class="row">
+            <div class="col-25">
+              <label for="phone">Phone:</label>
+            </div>
+            <div class="col-75">
+              <input type="number" id="phone" name="phone" placeholder="phone">
+            </div>
+          </div>
           <input type="submit" value="Submit" style="width: 200px;">
         </form>
       </div>
