--- a/contact us.html
+++ b/contact us.html
@@ -4,14 +4,6 @@
 	<title>Contact us</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-
-
-	
-
-
-
-
 <link rel="stylesheet" type="text/css" href="contact.css">
 
 </head>
@@ -20,7 +12,7 @@
 
 	<div class="container-contact100">
 		<div class="wrap-contact100">
-			<form class="contact100-form validate-form">
+			<form class="contact100-form validate-form" action="contact.php" method="post">
 				<span class="contact100-form-title">
 					Get in Touch
 				</span>
